--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.34.2",
     "appwrite": "^14.0.1",
+    "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
