--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.34.2",
     "appwrite": "^14.0.1",
+    "blurhash": "^2.0.5",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.3",
+    "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
     "zod": "^3.23.5"
