--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.34.2",
     "appwrite": "^14.0.1",
@@ -22,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.3",
+    "react-icons": "^5.2.1",
     "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
